# pg-amqp-bridge

./: .gitignore  Cargo.toml  README.md
pg_amqp_bridge/: Cargo.toml  Dockerfile
pg_amqp_bridge/src/: bridge.rs  config.rs  main.rs
pg_amqp_bridge_tests/: Cargo.toml
pg_amqp_bridge_tests/src/: main.rs
src/: bridge.rs  config.rs  lib.rs  main.rs  pg_model.rs
