[package]
name = "pg-amqp-bridge"
version = "0.1.0"
authors = ["steve-chavez <stevechavezast@gmail.com>"]

[[test]]
name = "main"
harness = false

[dependencies]
amqp = "0.1.0"
env_logger = "0.4.2"
fallible-iterator = "0.1.3"
log = "0.3.7"
postgres = "0.17.3"
r2d2 = "0.8.7"
r2d2_postgres = "0.16.0"

[dev-dependencies]
rustc-test = "0.3.0"
futures = "0.1.12"
lapin-futures = "0.9.0"
tokio-core = "0.1.6"
