[package]
name = "pg_amqp_bridge"
version = "0.2.0"
authors = ["steve-chavez <stevechavezast@gmail.com>", "tgodin <t.godin@kernel42.com>"]
edition = "2018"

[dependencies]
amqp = "0.1.3"
env_logger = "0.8.3"
fallible-iterator = "0.1.3"
log = "0.3.7"
postgres = { version = "0.15", features = ["with-uuid", "with-serde_json"] }
r2d2 = "0.8.7"
r2d2_postgres = "0.14.0"
uuid = { version = "0.5", features = ["v4"] }
serde_json = "*"

[dev-dependencies]
rustc-test = "0.3.0"
futures = "0.3.13"
lapin = "1.6.8"
tokio-core = "0.1.18"
