[package]
name = "pg_amqp_bridge_tests"
version = "0.1.0"
authors = ["steve-chavez <stevechavezast@gmail.com>"]
edition = "2018"

[dependencies]
amqp = "0.1.1"
env_logger = "0.4.2"
fallible-iterator = "0.1.3"
log = "0.3.7"
postgres = { version = "0.15", features = ["with-uuid", "with-serde_json"] }
r2d2 = "0.8.7"
r2d2_postgres = "0.14.0"
uuid = { version = "0.5", features = ["v4"] }
serde_json = "*"
pg_amqp_bridge = { path = "../pg_amqp_bridge" }

[dev-dependencies]
rustc-test = "0.3.0"
futures = "0.1.12"
lapin-futures = "0.9.0"
tokio-core = "0.1.6"
rustc_test = "*"
